--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -16,6 +16,27 @@ body {
     background: rgb(195, 195, 195);
     position: relative;
 }
+
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+  }
+  
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background: rgb(34, 34, 34);
+  }
+   
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background: #788487; 
+  }
+  
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555; 
+  }
+
 p {
     line-height: 28px;
     font-size: 15px;
@@ -1524,3 +1545,5 @@ BLOG SINGLE
     width: 80px;
     height: 80px;
 }
+
+/*this web site was designed by Supun Tharinda*/
