--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1523,6 +1523,10 @@ BLOG PAGE
     color: rgb(172, 7, 7);;
 }
 
+#footer iframe {
+    border-radius: 5%;
+}
+
 /* ==================================
 BLOG SINGLE
 =====================================*/
